crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__field__get_and_set_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/get_and_set_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅
      (method method [(local this @0) (local a @1)] []
         (block
            (print "method")
            (print (local a @1))))
      (method other [(local this @0) (local a @1)] []
         (block
            (print "other")
            (print (local a @1)))))
   (var foo (global @4) (call +4 (global Foo @3)))
   (var method (global @5) (attr (global foo @4) method))
   (expr (= (setattr (global foo @4) method) (attr (global foo @4) other)))
   (expr (call +6 (attr (global foo @4) method) 1.0))
   (expr (call +6 (global method @5) 2.0)))

----- stderr -----
