crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__field__get_on_class.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/get_on_class.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅)
   (expr (attr (global Foo @3) bar)))

----- stderr -----
