crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__field__method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅
      (method bar [(local this @0) (local arg @1)] []
         (block
            (print (local arg @1)))))
   (var bar (global @4) (attr (call +4 (global Foo @3)) bar))
   (print "got method")
   (expr (call +5 (global bar @4) "arg")))

----- stderr -----
