crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__field__method_binds_this.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/method_binds_this.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅
      (method sayName [(local this @0) (local a @1)] []
         (block
            (print (attr (local this @0) name))
            (print (local a @1)))))
   (var foo1 (global @4) (call +4 (global Foo @3)))
   (expr (= (setattr (global foo1 @4) name) "foo1"))
   (var foo2 (global @5) (call +5 (global Foo @3)))
   (expr (= (setattr (global foo2 @5) name) "foo2"))
   (expr (= (setattr (global foo2 @5) fn) (attr (global foo1 @4) sayName)))
   (expr (call +6 (attr (global foo2 @5) fn) 1.0)))

----- stderr -----
