crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__field__on_instance.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/on_instance.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1) ∅)
   (var foo (global @2) (call +2 (global Foo @1)))
   (print (= (setattr (global foo @2) bar) "bar value"))
   (print (= (setattr (global foo @2) baz) "baz value"))
   (print (attr (global foo @2) bar))
   (print (attr (global foo @2) baz)))

----- stderr -----
